# eservice-ai-platform

./: .env.example  .gitignore  GITHUB_PUSH_INSTRUCTIONS.md  GITHUB_SETUP.md  Makefile  README.md  pyproject.toml  requirements.txt  setup-github.ps1  setup-github.sh
ci-cd/.github/workflows/: deploy.yml
docker/: Dockerfile  docker-compose.yml
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTION.md  DEPLOYMENT_GUIDE.md  LLM_INTEGRATION.md
k8s/: deployment.yaml  namespace.yaml
src/: __init__.py  config.py  main.py
src/agents/: __init__.py
src/api/v1/endpoints/: __init__.py  ai_chat.py  analytics.py  health.py  knowledge_base.py  routing.py  tickets.py
src/cache/: __init__.py  redis_client.py
src/core/: exceptions.py  logger.py
src/db/: __init__.py  session.py
src/db/crud/: __init__.py
src/db/models/: ticket.py
src/llm/: __init__.py  providers.py
src/middleware/: metrics.py  tracing.py
src/queue/: __init__.py
src/rag/: __init__.py
src/schemas/: __init__.py
tests/: conftest.py
